--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,7 +2,7 @@
 
 	.intro
 	{
-		margin-top: 50px;
+		padding-top: 200px;
 	}
 
 	.intro .intro-body #intro-content
